# quick_xml

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  benchmark.exs  mix.exs
.github/workflows/: ci.yml  release.yml
lib/: quick_xml.ex
native/quick_xml_nif/: Cargo.toml
native/quick_xml_nif/src/: lib.rs
test/: quick_xml_test.exs
